--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="nav-menu">
                 <a href="#" class="nav-item">Home</a>
-                <a href="#" class="nav-item">Network</a>
+                <a href="#" class="nav-item">Networks</a>
                 <a href="#" class="nav-item">Jobs</a>
                 <a href="#" class="nav-item">Messages</a>
                 <a href="#" class="nav-item">Me</a>
